--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="main">
     </div>
 
-    <div class="contenido">
+    <div class="contenido" id="#contenido">
         <div class="container">
             <div class="custom-nav">
 
@@ -52,19 +52,16 @@
                             <div class="collapse navbar-collapse items-nav" id="navbarText">
                                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                                     <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                                        <a class="nav-link active" aria-current="page" href="#contenido">HOME</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">SOLUCIONES</a>
+                                        <a class="nav-link" href="./views/projects.html">PROYECTOS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">PROYECTOS</a>
+                                        <a class="nav-link" href="#about">SOBRE NOSOTROS</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">SOBRE NOSOTROS</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">CONTÁCTO</a>
+                                        <a class="nav-link" href="#contact">CONTÁCTO</a>
                                     </li>
                                 </ul>
                                 <span class="navbar-text">
@@ -95,8 +92,12 @@
                 </div>
                 <div class="demos">
                     <div class="options-demo">
-                        <button class="get-started">Empecemos</button>
-                        <button class="get-demo">Solicitar demo</button>
+                        <a href="#contact">
+                            <button class="get-started">Empecemos</button>
+                        </a>
+                        <a href="./views/req_demo.html">
+                            <button class="get-demo">Solicitar demo</button>
+                        </a>
                     </div>
                 </div>
 
@@ -109,117 +110,119 @@
     </div>
 
     <div class="portfolio">
-        <div class="container">
-            <div class="portfolio-content">
-                <h1 class="portfolio-header">Portafolio</h1>
-                <p class="portfolio-text">Descubre algunos de nuestros proyectos más destacados y las soluciones que
-                    hemos <br>
-                    desarrollado para nuestros clientes.</p>
-            </div>
-            <div class="row min-cards">
-                <div class="cards-demo">
-                    <div class="col project-card">
-                        <div class="card">
-                            <img src="./src/img/1.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">E-Commerce Premiun</h5>
-                                <p class="card-text">Plataforma de comercio electrónico con integración de pagos y
-                                    gestión de inventario.</p>
-                                <div class="pill_badges">
-                                    <div class="pill">
-                                        <p class="pill-text">Next.js</p>
+        <section id="portfolio">
+            <div class="container">
+                <div class="portfolio-content">
+                    <h1 class="portfolio-header">Portafolio</h1>
+                    <p class="portfolio-text">Descubre algunos de nuestros proyectos más destacados y las soluciones que
+                        hemos <br>
+                        desarrollado para nuestros clientes.</p>
+                </div>
+                <div class="row min-cards">
+                    <div class="cards-demo">
+                        <div class="col project-card">
+                            <div class="card">
+                                <img src="./src/img/1.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">E-Commerce Premiun</h5>
+                                    <p class="card-text">Plataforma de comercio electrónico con integración de pagos y
+                                        gestión de inventario.</p>
+                                    <div class="pill_badges">
+                                        <div class="pill">
+                                            <p class="pill-text">Next.js</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Tailwind css</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Stripe</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Mysql</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Docker</p>
+                                        </div>
                                     </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Tailwind css</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Stripe</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Mysql</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Docker</p>
-                                    </div>
+                                    <a href="#" class="btn-view">
+                                        <span class="inside-text">
+                                            Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
+                                        </span>
+                                    </a>
                                 </div>
-                                <a href="#" class="btn-view">
-                                    <span class="inside-text">
-                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
-                                    </span>
-                                </a>
+                            </div>
+                        </div>
+                        <div class="col project-card">
+                            <div class="card">
+                                <img src="./src/img/2.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Enterprise Management App</h5>
+                                    <p class="card-text">Sistema integral para la gestión de recursos y proyectos
+                                        empresariales.</p>
+                                    <div class="pill_badges">
+                                        <div class="pill">
+                                            <p class="pill-text">Vue js</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Firebase</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Bootstrap</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">WebRTC</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Mobile System</p>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="btn-view">
+                                        <span class="inside-text">
+                                            Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col project-card">
+                            <div class="card">
+                                <img src="./src/img/3.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Personal Plataforms</h5>
+                                    <p class="card-text">Sistema de aprendizaje en línea con cursos interactivos y
+                                        seguimiento de progreso.</p>
+                                    <div class="pill_badges">
+                                        <div class="pill">
+                                            <p class="pill-text">React</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Node js</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Postgre SQL</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">Docker</p>
+                                        </div>
+                                        <div class="pill">
+                                            <p class="pill-text">CRM</p>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="btn-view">
+                                        <span class="inside-text">
+                                            Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
+                                        </span>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col project-card">
-                        <div class="card">
-                            <img src="./src/img/2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Enterprise Management App</h5>
-                                <p class="card-text">Sistema integral para la gestión de recursos y proyectos
-                                    empresariales.</p>
-                                <div class="pill_badges">
-                                    <div class="pill">
-                                        <p class="pill-text">Vue js</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Firebase</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Bootstrap</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">WebRTC</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Mobile System</p>
-                                    </div>
-                                </div>
-                                <a href="#" class="btn-view">
-                                    <span class="inside-text">
-                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col project-card">
-                        <div class="card">
-                            <img src="./src/img/3.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Personal Plataforms</h5>
-                                <p class="card-text">Sistema de aprendizaje en línea con cursos interactivos y
-                                    seguimiento de progreso.</p>
-                                <div class="pill_badges">
-                                    <div class="pill">
-                                        <p class="pill-text">React</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Node js</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Postgre SQL</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">Docker</p>
-                                    </div>
-                                    <div class="pill">
-                                        <p class="pill-text">CRM</p>
-                                    </div>
-                                </div>
-                                <a href="#" class="btn-view">
-                                    <span class="inside-text">
-                                        Ver proyecto <i class='bx  bx-arrow-out-up-right-square'></i>
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
+                    <div class="more-projects">
+                        <button class="more-projects-button">Ver más proyectos</button>
                     </div>
                 </div>
-                <div class="more-projects">
-                    <button class="more-projects-button">Ver más proyectos</button>
-                </div>
             </div>
-        </div>
+        </section>
     </div>
 
     <div class="content-service">
@@ -297,7 +300,7 @@
         </div>
     </div>
 
-    <div class="our-team">
+    <div class="our-team" id="about">
         <div class="container container-team">
             <div class="portfolio-content">
                 <h1 class="portfolio-header">Nuestro Equipo</h1>
@@ -462,7 +465,7 @@
             </div>
         </div>
     </div>
-    <div class="container contact">
+    <div class="container contact" id="contact">
         <div class="contact-content">
             <h1 class="portfolio-header">Contáctanos</h1>
             <p class="portfolio-text">¿Tienes un proyecto en mente? Estamos aquí para ayudarte a hacerlo
